Fix overflow problem in iOS menu

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -36,7 +36,6 @@
 
 .root {
   border-bottom: $default-border;
-  overflow: hidden;
   position: relative;
   z-index: 3; /* above form-control within input-group */
 }
@@ -47,6 +46,13 @@
       height: 5em;
     }
   }
+}
+
+.backgroundOverflow {
+  overflow: hidden;
+  position: absolute;
+  height: 100%;
+  width: 100%;
 }
 
 .background {
@@ -89,7 +95,6 @@
 
 .hamburger {
   @include plain-button;
-
   cursor: pointer;
   margin-top: -15px;
   position: absolute;
@@ -98,7 +103,6 @@
 
   span {
     @include image-replace;
-
     background: url('./hamburger.svg') no-repeat center;
     display: block;
     height: 30px;
@@ -122,7 +126,6 @@
 
 .menuBackground {
   @include plain-button;
-
   background: rgba(0, 0, 0, .5);
   height: 100%;
   left: 0;
